--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,24 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Pressed state -->
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/primary_light" />
-            <corners android:radius="16dp" />
-            <stroke
-                android:width="2dp"
-                android:color="@color/primary_color" />
-        </shape>
-    </item>
-
-    <!-- Default state -->
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
-            <corners android:radius="16dp" />
-            <stroke
-                android:width="1dp"
-                android:color="#F3F3F3" />
-        </shape>
-    </item>
+<item android:state_pressed="true">
+    <shape android:shape="rectangle">
+        <corners android:radius="16dp" />
+        <solid android:color="@color/primary_dark" />
+        <stroke android:width="1dp" android:color="@color/primary_color" />
+    </shape>
+</item>
+<item>
+    <shape android:shape="rectangle">
+        <corners android:radius="16dp" />
+        <solid android:color="@color/card_background" />
+        <stroke android:width="1dp" android:color="@color/primary_color" />
+    </shape>
+</item>
 </selector>
