--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
     <!-- Primary Colors -->
     <color name="primary_color">#6750A4</color>
     <color name="primary_dark">#21005D</color>
@@ -15,31 +16,43 @@
     <!-- Neutral Colors -->
     <color name="background">#FFFBFE</color>
     <color name="surface">#FFFBFE</color>
+    <color name="card_background">#FFFFFF</color>
+    <color name="light_blue">#E3F2FD</color>
+    <color name="surface_variant">#E7E0EC</color>
 
     <!-- Text Colors -->
     <color name="text_primary">#1C1B1F</color>
     <color name="text_secondary">#49454F</color>
     <color name="text_hint">#79747E</color>
+    <color name="text_on_primary">#FFFFFF</color>
+    <color name="text_on_secondary">#FFFFFF</color>
+    <color name="text_on_surface">#1C1B1F</color>
+    <color name="text_on_surface_variant">#49454F</color>
 
-    <color name="accent_color">#03DAC5</color>
-    <color name="card_background">#FFFFFF</color>
-
+    <!-- Navigation -->
     <color name="nav_selected">#6200EE</color>
     <color name="nav_unselected">#757575</color>
 
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="gray">#FF757575</color>
-    <color name="red">#FFD32F2F</color>
-    <color name="blue">#FF1976D2</color>
-    <color name="green">#FF388E3C</color>
-    <color name="orange">#FFF57C00</color>
-    <color name="purple">#FF7B1FA2</color>
+    <!-- Semantic Colors -->
+    <color name="accent_color">#03DAC5</color>
+    <color name="error_color">#B00020</color>
+    <color name="success_color">#388E3C</color>
+    <color name="warning_color">#F57C00</color>
+    <color name="info_color">#1976D2</color>
 
-    <color name="light_blue">#E3F2FD</color>
-    <color name="class_item_background">#F8F9FA</color>
+    <!-- UI Element Colors -->
     <color name="divider_color">#E0E0E0</color>
+    <color name="border_color">#E0E0E0</color>
+    <color name="ripple_color">#1F000000</color>
+
+    <!-- Additional Colors -->
+    <color name="red">#E91E63</color>
+    <color name="gray">#706C6C</color>
+    <color name="green">#19E522</color>
+    <color name="blue">#1231E1</color>
+    <color name="purple">#CE12EF</color>
+    <color name="orange">#FF5722</color>
+
+    <color name="route_start">#4CAF50</color>  <!-- Green for start -->
+    <color name="route_end">#F44336</color>    <!-- Red for end -->
 </resources>
